--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -92,7 +92,7 @@
 		</template>
 
 		<template id="order">
-			<form class="form" name="order">
+			<form class="form" name="OrderInfo">
 				<div class="order">
 					<div class="order__field">
 						<h2 class="modal__title">Способ оплаты</h2>
@@ -125,7 +125,7 @@
 		</template>
 
 		<template id="contacts">
-			<form class="form" name="contacts">
+			<form class="form" name="Contacts">
 				<div class="order">
 					<label class="order__field">
 						<span class="form__label modal__title">Email</span>
